# src/main/java/projects/sensor/api/OpenApiRouter.java
@@ -4,7 +4,9 @@ import io.reactivex.Single;
 import io.vertx.core.http.HttpHeaders;
 import io.vertx.core.http.HttpServer;
 import io.vertx.core.http.HttpServerOptions;
+import io.vertx.core.http.HttpServerRequest;
 import io.vertx.core.json.JsonObject;
+import io.vertx.ext.web.RequestBody;
 import io.vertx.ext.web.Router;
 import io.vertx.ext.web.handler.StaticHandler;
 import io.vertx.ext.web.openapi.RouterBuilder;
@@ -20,8 +22,8 @@ import org.slf4j.Logger;
 
 import projects.sensor.api.util.FileUtil;
 import projects.sensor.db.DatabaseClient;
-import projects.sensor.model.DataPoint;
-import projects.sensor.model.Sensor;
+import projects.sensor.model.Data;
+import projects.sensor.model.GetSensorResponse;
 
 import java.io.File;
 import java.util.Date;
@@ -68,10 +70,11 @@ public class OpenApiRouter {
                     routerBuilder.operation("logData")
                             .handler(routingContext -> {
                                 RequestParameters params = routingContext.get(ValidationHandler.REQUEST_CONTEXT_KEY);
+                                RequestParameter sensorId = params.queryParameter("sensorId");
                                 RequestParameter temperature = params.queryParameter("temperature");
                                 RequestParameter humidity = params.queryParameter("humidity");
                                 Date dateTime = new Date();
-                                logger.info("logData - temperature = {}, humidity = {}, time = {}", temperature, humidity, dateTime);
+                                logger.info("logData - sensorId = {}, temperature = {}, humidity = {}, time = {}", sensorId, temperature, humidity, dateTime);
                                 routingContext.response()
                                         .setStatusCode(201)
                                         .setStatusMessage("OK")
@@ -85,18 +88,23 @@ public class OpenApiRouter {
                                 logger.info("OpenApiRouter- {} error", operation.getString("operationId"));
                             });
 
-                    routerBuilder.operation("listDataPoints")
+                    routerBuilder.operation("getData")
                             .handler(routingContext -> {
                                 RequestParameters params = routingContext.get(ValidationHandler.REQUEST_CONTEXT_KEY);
                                 RequestParameter sensorId = params.pathParameter("sensorId");
                                 RequestParameter year = params.queryParameter("year");
                                 RequestParameter month = params.queryParameter("month");
                                 RequestParameter date = params.queryParameter("date");
-                                logger.info("listDataPoints - sensorId = {}, year = {}, month = {}, date = {}", sensorId, year, month, date);
+                                RequestParameter hour = params.queryParameter("hour");
+                                if (hour != null) {
+                                    logger.info("listDataPoints - sensorId = {}, year = {}, month = {}, date = {}, hour = {}", sensorId, year, month, date, hour);
+                                } else {
+                                    logger.info("listDataPoints - sensorId = {}, year = {}, month = {}, date = {}", sensorId, year, month, date);
+                                }
                                 routingContext.response()
                                         .setStatusCode(200)
                                         .setStatusMessage("OK")
-                                        .end(getDataPoints().toBuffer());
+                                        .end(getDataMock().toBuffer());
                             }).failureHandler(routingContext -> {
                                 JsonObject operation = routingContext.get("operationModel");
                                 routingContext.response()
@@ -106,7 +114,7 @@ public class OpenApiRouter {
                                 logger.info("OpenApiRouter- {} error", operation.getString("operationId"));
                             });
 
-                    routerBuilder.operation("dataPointsRange")
+                    routerBuilder.operation("getDataRange")
                             .handler(routingContext -> {
                                 RequestParameters params = routingContext.get(ValidationHandler.REQUEST_CONTEXT_KEY);
                                 RequestParameter sensorId = params.pathParameter("sensorId");
@@ -117,7 +125,7 @@ public class OpenApiRouter {
                                 routingContext.response()
                                         .setStatusCode(200)
                                         .setStatusMessage("OK")
-                                        .end(getDataPoints().toBuffer());
+                                        .end(getDataMock().toBuffer());
                             }).failureHandler(routingContext -> {
                                 JsonObject operation = routingContext.get("operationModel");
                                 routingContext.response()
@@ -134,7 +142,45 @@ public class OpenApiRouter {
                                 routingContext.response()
                                         .setStatusCode(200)
                                         .setStatusMessage("OK")
-                                        .end(getSensors().toBuffer());
+                                        .end(listSensorsMock().toBuffer());
+                            }).failureHandler(routingContext -> {
+                                JsonObject operation = routingContext.get("operationModel");
+                                routingContext.response()
+                                        .setStatusCode(400)
+                                        .setStatusMessage("Bad Request")
+                                        .end();
+                                logger.info("OpenApiRouter- {} error", operation.getString("operationId"));
+                            });
+
+                    routerBuilder.operation("getSensor")
+                            .handler(routingContext -> {
+                                RequestParameters  params = routingContext.get(ValidationHandler.REQUEST_CONTEXT_KEY);
+                                RequestParameter sensorId = params.queryParameter("sensorId");
+                                logger.info("getSensor - params = {}", params);
+                                routingContext.response()
+                                        .setStatusCode(200)
+                                        .setStatusMessage("OK")
+                                        .end(getSensorMock(sensorId.getString()).toBuffer());
+                            }).failureHandler(routingContext -> {
+                                JsonObject operation = routingContext.get("operationModel");
+                                routingContext.response()
+                                        .setStatusCode(400)
+                                        .setStatusMessage("Bad Request")
+                                        .end();
+                                logger.info("OpenApiRouter- {} error", operation.getString("operationId"));
+                            });
+
+                    routerBuilder.operation("addSensor")
+                            .handler(routingContext -> {
+                                RequestParameters  params = routingContext.get(ValidationHandler.REQUEST_CONTEXT_KEY);
+                                RequestParameter body = params.body();
+                                JsonObject jsonBody = body.getJsonObject();
+                                RequestParameter sensorId = params.queryParameter("sensorId");
+                                logger.info("addSensor - sensorId = {}, location = {}", jsonBody.getString("id"), jsonBody.getString("location"));
+                                routingContext.response()
+                                        .setStatusCode(200)
+                                        .setStatusMessage("OK")
+                                        .end(getSensorMock(sensorId.getString()).toBuffer());
                             }).failureHandler(routingContext -> {
                                 JsonObject operation = routingContext.get("operationModel");
                                 routingContext.response()
@@ -195,25 +241,30 @@ public class OpenApiRouter {
     }
 
     // Mock a response
-    private JsonObject getDataPoints() {
+    private JsonObject getDataMock() {
         int n = 4;
-        DataPoint[] dataPoints = new DataPoint[n];//
+        Data[] dataPoints = new Data[n];//
         for (int i = 0; i < n; i++) {
             int temperature = (int) (Math.random() * 30);
             int humidity = (int) (Math.random() * 100);
-            dataPoints[i] = new DataPoint(temperature, humidity, String.valueOf(i));
+            dataPoints[i] = new Data(temperature, humidity, String.valueOf(i));
         }
         return new JsonObject().put("data", dataPoints);
     }
 
     // Mock a reponse
-    private JsonObject getSensors() {
-        Sensor[] sensors = new Sensor[4];
-        sensors[0] = new Sensor("1", "somewhere", "01-01-2023");
-        sensors[1] = new Sensor("2", "somewhere", "01-01-2023");
-        sensors[2] = new Sensor("3", "somewhere else", "01-01-2023");
-        sensors[3] = new Sensor("4", "somewhere slse", "01-01-2023");
+    private JsonObject listSensorsMock() {
+        GetSensorResponse[] sensors = new GetSensorResponse[4];
+        sensors[0] = new GetSensorResponse("1", "somewhere", "01-01-2023");
+        sensors[1] = new GetSensorResponse("2", "somewhere", "01-01-2023");
+        sensors[2] = new GetSensorResponse("3", "somewhere else", "01-01-2023");
+        sensors[3] = new GetSensorResponse("4", "somewhere slse", "01-01-2023");
         return new JsonObject().put("data", sensors);
+    }
+
+    private JsonObject getSensorMock(String sensorId) {
+        GetSensorResponse sensor = new GetSensorResponse(sensorId, "somewhere", "0/0/0 00:00:00");
+        return new JsonObject().put("data", sensor);
     }
 
     private Single<File> loadWebJars(String source, String dest) {
